Add temporary direct connections from File menu
